--- a/public/privacy-policy.html
+++ b/public/privacy-policy.html
@@ -117,7 +117,7 @@
     </ul>
     <p>
       To make a request, email us at:
-      <a href="mailto:arie@topleveltutoring.com">topleveltutoring@gmail.com</a>.
+      <a href="mailto:arie@topleveltutoring.com">arie@topleveltutoring.com</a>.
     </p>
 
     <h2>6. Children’s Privacy</h2>
@@ -140,7 +140,7 @@
     </p>
     <p>
       Email:
-      <a href="mailto:arie@topleveltutoring.com">topleveltutoring@gmail.com</a>
+      <a href="mailto:arie@topleveltutoring.com">arie@topleveltutoring.com</a>
     </p>
   </div>
 </body>
